# mauno

./: .env  .env.dist  .gitignore  README.md  actions.py  bot.py  card.py  commandlist.txt  deck.py  errors.py  game.py  game_manager.py  internationalization.py  mkdocs.yml  noxfile.py  player.py  promotions.py  pyproject.toml  results.py  settings.py  shared_vars.py  simple_commands.py  sticker_loader.py  studies.py  test.py  todo.md  ubo.sqlite-shm  ubo.sqlite-wal  uno.sqlite-shm  uno.sqlite-wal  user_setting.py  utils.py
.github/workflows/: mau-core.yml  mau.yml  python-package.yml  type-check.yml  type-web.yml
docs/: eco.md  index.md
docs/assets/: style.css
docs/mau/: enums.md  events.md  index.md  session.md  storage.md
docs/mau/deck/: behavior.md  card.md  deck.md  generator.md  index.md  presets.md
docs/mau/game/: game.md  player.md  player_manager.md  rules.md  shotgun.md
docs/use/: card_generator.md  commands.md  game.md  index.md  install.md  maintenance.md  rules.md
images/: build_classic_colorblind_deck.py  sticker_config.json.sample  sticker_ids_mauno_classic.json  sticker_ids_mauno_progressive.json  sticker_loader.py  sticker_uploader.py  stickers_progressive.json
locales/: unobot.pot
mau/: __init__.py  card.py  deck.py  deck_generator.py  enums.py  events.py  exceptions.py  game.py  journal.py  keyboards.py  messages.py  player.py  rules.py  session.py  session_storage.py  storage.py  user.py
mau-web/: README.md  bun.lockb  index.html  package.json  tsconfig.app.json  vite.config.ts
mau-web/public/: logo.png.pxo  site.webmanifest
mau-web/src/: App.vue  api.ts  main.ts  types.ts
mau-web/src/app/: App.vue  app.ts  main.css  router.ts
mau-web/src/assets/: main.css
mau-web/src/components/: CardHeader.vue  ContentCard.vue  ErrorLoadingCard.vue  NotifyCard.vue  ToastContainer.vue
mau-web/src/pages/: ChallengesPage.vue  GamePage.vue  HomePage.vue  LeaderboardPage.vue  LendingPage.vue  RoomListPage.vue  RoomPage.vue  UserPage.vue
mau-web/src/router/: index.ts
mau-web/src/stores/: settings.ts  user.ts
mau/deck/: __init__.py  behavior.py  card.py  deck.py  generator.py  presets.py
mau/game/: __init__.py  counter.py  game.py  player.py  player_manager.py  rules.py  shotgun.py  timer.py
mau/session/: players.py  session.py  storage.py
mau/telegram/: __init__.py  journal.py  player.py  turn.py
maubot/: __init__.py  __main__.py  actions.py  bot.py  config.py  context.py  database.py  db.py  deck.py  filters.py  game.py  game_manager.py  internationalization.py  keyboards.py  markups.py  messages.py  mwt.py  player.py  results.py  settings.py  shared_vars.py  simple_commands.py  stickers.py  utils.py
maubot/events/: journal.py  router.py
maubot/handlers/: __init__.py  crystals.py  deck.py  donut.py  player.py  rules.py  session.py  simple_commands.py  turn.py  user.py
maubot/uno/: __init__.py  actions.py  automa.py  card.py  deck.py  enums.py  exceptions.py  game.py  game_manager.py  journal.py  player.py  session.py
maubot_old/: bot.py  promotions.py  results.py  utils.py
maubot_old/uno/: card.py  game_manager.py  player.py
mauserve/: __init__.py  config.py  main.py  models.py  schemes.py
mauserve/leaderbord/: router.py
mauserve/mau/: __init__.py  rules.py
mauserve/roomlist/: router.py  schemes.py
mauserve/routers/: __init__.py  game.py  games.py  leaaderboard.py  roomlist.py  users.py
mauserve/schemes/: __init__.py  db.py  game.py  users.py
mauserve/services/: connection.py  events.py  game_context.py
mauserve/users/: router.py  schemes.py  token.py
test/: test_game_manager.py  test_player.py
tests/: __init__.py
(+89 files in other folders)
