[project]
name = "mau"
version = "2.3"
description = "Play Uno with your friends in Telegram chats."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "loguru>=0.7.3"
]

[dependency-groups]
bot = [
    "aiogram>=3.20.0",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.2",
]
dev = [
    "icecream>=2.1.4",
    "mypy>=1.15.0",
    "nox>=2025.2.9",
    "pytest>=8.3.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
]

# Ruff linter ----------------------------------------------------------

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "N", "PL", "UP", "ANN", "W", "ASYNC"]
ignore = ["D407", "D107", "D213", "D203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Build system ---------------------------------------------------------

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
