[project]
name = "mau"
version = "2.4"
description = "Mau card game engine"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = ["loguru>=0.7.3"]

[dependency-groups]
dev = ["nox>=2025.2.9", "pyright>=1.1.405", "ruff>=0.13.0"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
]

# Ruff linter ----------------------------------------------------------

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D407",
    "D107",
    "D213",
    "D203",
    "RUF",
    "COM",    # trailing commas, controlled by format
    "EM102",  #  Exception must not use an f-string literal, assign to variable first
    "TRY003", # Avoid specifying long messages outside the exception class
    "INP001", # part of an implicit namespace package. Add an `__init__.py`.
    "FIX",    # Line contains TODO, consider resolving the
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link for this TODO
    "S311", # Use standart random func
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Build system ---------------------------------------------------------

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
